@@ -3668,6 +3668,26 @@ name|int
 name|length2
 parameter_list|)
 block|{
+comment|// Short circuit equal case
+if|if
+condition|(
+name|buffer1
+operator|==
+name|buffer2
+operator|&&
+name|offset1
+operator|==
+name|offset2
+operator|&&
+name|length1
+operator|==
+name|length2
+condition|)
+block|{
+return|return
+literal|0
+return|;
+block|}
 comment|// Bring WritableComparator code local
 name|int
 name|end1
@@ -3776,19 +3796,13 @@ if|if
 condition|(
 name|left
 operator|==
-literal|null
-operator|&&
 name|right
-operator|==
-literal|null
 condition|)
-block|{
 return|return
 literal|true
 return|;
-block|}
-return|return
-operator|(
+if|if
+condition|(
 name|left
 operator|==
 literal|null
@@ -3796,8 +3810,12 @@ operator|||
 name|right
 operator|==
 literal|null
-operator|||
-operator|(
+condition|)
+return|return
+literal|false
+return|;
+if|if
+condition|(
 name|left
 operator|.
 name|length
@@ -3805,10 +3823,48 @@ operator|!=
 name|right
 operator|.
 name|length
-operator|)
-condition|?
+condition|)
+return|return
 literal|false
-else|:
+return|;
+if|if
+condition|(
+name|left
+operator|.
+name|length
+operator|==
+literal|0
+condition|)
+return|return
+literal|true
+return|;
+comment|// Since we're often comparing adjacent sorted data,
+comment|// it's usual to have equal arrays except for the very last byte
+comment|// so check that first
+if|if
+condition|(
+name|left
+index|[
+name|left
+operator|.
+name|length
+operator|-
+literal|1
+index|]
+operator|!=
+name|right
+index|[
+name|right
+operator|.
+name|length
+operator|-
+literal|1
+index|]
+condition|)
+return|return
+literal|false
+return|;
+return|return
 name|compareTo
 argument_list|(
 name|left
@@ -3817,7 +3873,122 @@ name|right
 argument_list|)
 operator|==
 literal|0
-operator|)
+return|;
+block|}
+specifier|public
+specifier|static
+name|boolean
+name|equals
+parameter_list|(
+specifier|final
+name|byte
+index|[]
+name|left
+parameter_list|,
+name|int
+name|leftOffset
+parameter_list|,
+name|int
+name|leftLen
+parameter_list|,
+specifier|final
+name|byte
+index|[]
+name|right
+parameter_list|,
+name|int
+name|rightOffset
+parameter_list|,
+name|int
+name|rightLen
+parameter_list|)
+block|{
+comment|// short circuit case
+if|if
+condition|(
+name|left
+operator|==
+name|right
+operator|&&
+name|leftOffset
+operator|==
+name|rightOffset
+operator|&&
+name|leftLen
+operator|==
+name|rightLen
+condition|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+comment|// different lengths fast check
+if|if
+condition|(
+name|leftLen
+operator|!=
+name|rightLen
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+if|if
+condition|(
+name|leftLen
+operator|==
+literal|0
+condition|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+comment|// Since we're often comparing adjacent sorted data,
+comment|// it's usual to have equal arrays except for the very last byte
+comment|// so check that first
+if|if
+condition|(
+name|left
+index|[
+name|leftOffset
+operator|+
+name|leftLen
+operator|-
+literal|1
+index|]
+operator|!=
+name|right
+index|[
+name|rightOffset
+operator|+
+name|rightLen
+operator|-
+literal|1
+index|]
+condition|)
+return|return
+literal|false
+return|;
+return|return
+name|compareTo
+argument_list|(
+name|left
+argument_list|,
+name|leftOffset
+argument_list|,
+name|leftLen
+argument_list|,
+name|right
+argument_list|,
+name|rightOffset
+argument_list|,
+name|rightLen
+argument_list|)
+operator|==
+literal|0
 return|;
 block|}
 comment|/**    * Return true if the byte array on the right is a prefix of the byte    * array on the left.    */
